[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "3", features = ["derive"] } # 命令行参数处理
colored = "2" # 命令终端多彩输出
jsonxf = "1.1" # json pretty
mime = "0.3" # 处理 mime 类型
reqwest = { version = "0.11", features = ["json"] } #http 客户端
tokio = { version = "1", features = ["full"] } # 异步处理
syntect = "4"
